--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -24,10 +24,13 @@
 		border-radius: 2px;
 
 		&:hover {
-			background: @hover-color;
+			color: @hover-color;
 			text-decoration: none;
-			color: white;
 			cursor: pointer;
+		}
+
+		i {
+			margin-right: 5px;
 		}
 	}
 
@@ -40,10 +43,13 @@
 		border-radius: 2px;
 
 		&:hover {
-			background: @hover-color;
+			color: @hover-color;
 			text-decoration: none;
-			color: white;
 			cursor: pointer;
+		}
+
+		i {
+			margin-left: 5px;
 		}
 	}
 
