--- a/src/less/series.less
+++ b/src/less/series.less
@@ -3,7 +3,7 @@
 @import './global/mixin.less';
 
 /* Series Styles */
-@import './pages/series-posts.less';
+@import './pages/series-detail.less';
 @import './pages/page.less';
 
 /* Series Archive Styles */
