--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -1,36 +1,29 @@
 {{!< default}}
-{{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
+
 <!-- start site's main content area -->
 <section class="content-wrap archive">
 	<div class="page-container sidebar-layout">
-		<main class="main-content">
-			<!-- start post -->
-			{{#post}}
-				<main class="{{post_class}}">
-					{{#if feature_image}}
-						<div class="post-image" style="background-image: url({{feature_image}});">
-						</div>
-					{{/if}}
-					<h1 class="page-title">{{{title}}}</h1>
-					<div class="about-content">
-						{{content}}
-					</div>
-					<div class="author-container">
-						{{#get "authors" limit="all" include="count.posts" order="count.posts desc" }}
-							{{#foreach authors}}
-								{{> author/author-card}}
-							{{/foreach}}
-						{{/get}}
-					</div>
-				</main>
-			{{/post}}
-			<!-- end post -->
-		</main>
-		<!-- end main post area -->
-		<!-- start main post area -->
+		{{#post}}
+			<main class="{{post_class}}">
+				{{#if feature_image}}
+					<img alt="{{title}}" class="featured-image lazy" data-src="{{img_url feature_image}}" data-rjs="2">
+				{{/if}}
+				<h1 class="page-title">{{{title}}}</h1>
+				{{content}}
+				<div class="author-container">
+					{{#get "authors" limit="all" include="count.posts" order="count.posts desc" }}
+						{{#foreach authors}}
+							{{> author/author-card}}
+						{{/foreach}}
+					{{/get}}
+				</div>
+			</main>
+		{{/post}}
 		{{> sidebar}}
 	</div>
 </section>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
 <!-- end site's main content area -->
+
+{{#contentFor "scripts"}}
+	<script src="{{asset "js/pages.js"}}"></script>
+{{/contentFor}}
