--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -1,17 +1,10 @@
 {{!< default}}
-{{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
-<!-- start site's main content area -->
 
 
 <section class="content-wrap archive page-resources">
   <div class="page-container">
-    <!-- start post -->
     {{#post}}
       <main class="main-content" style="width:100%; padding: 10px 0">
-        {{#if feature_image}}
-          <div class="post-image" style="background-image: url({{feature_image}});">
-          </div>
-        {{/if}}
         <h1>{{{title}}}</h1>
         <p>{{content}}</p>
         <div id="tablewrapper">
@@ -32,8 +25,9 @@
   </div>
   {{/post}}
   </div>
-  <!-- end main post area -->
 </section>
+
 {{#contentFor "scripts"}}
+  <script src="{{asset "js/pages.js"}}"></script>
   <script src="{{asset "js/resources.js"}}"></script>
 {{/contentFor}}
