--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -156,14 +156,17 @@
 
 		.btn {
 			color: #738a94;
+			border: 0;
+			margin-right: 20px;
+			@media(max-width: @mobile-breakpoint) {
+				margin-right: 24px;
+			}
 		}
 
 		i {
 			font-size: 16px;
-			margin-right: 20px;
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 20px;
-				margin-right: 24px;
 			}
 		}
 
