java code snippet color

--- a/src/less/posts/languages/java.less
+++ b/src/less/posts/languages/java.less
@@ -1,21 +1,21 @@
 .post-content {
     .java,
     .language-java {
-      border: 1px solid #f5e4e2;
-      background: #fff5f5;
+      border: 1px solid #f5e8e2;
+      background: #fffbf5;
       color: #574949;
 
       .keyword {
         font-weight: 900;
-        color: #880700;
+        color: #884d00;
       }
 
       .class .title {
-        color: #0023d8;
+        color: #d80000;
       }
 
       .string {
-        color: #b23a3a;
+        color: #8d5656;
       }
     }
 }
