--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -30,7 +30,7 @@
 		}
 
 		.post-title {
-			font-size: 1.6em;
+			font-size: 1.8em;
 			Line-height: 1.2;
 			font-family: @body-font;
 			margin: 0;
@@ -56,7 +56,7 @@
 			font-family: @header-font;
 			transition: @transition;
 			color: @h1-color;
-			font-size: 1.2em;
+			font-size: 1.3;
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			overflow: hidden;
