post image on tablet

--- a/partials/author/widget-authorwebsite.hbs
+++ b/partials/author/widget-authorwebsite.hbs
@@ -1,5 +1,5 @@
 <!-- Start Website Widget -->
-{{#if "website"}}
+{{#if website}}
   <div class="widget website">
     <h4 class="title">Website</h4>
     <a class="website-link" href="{{website}}">{{website}}</a>
