simplified code styles

--- a/post.hbs
+++ b/post.hbs
@@ -57,7 +57,7 @@
 		<script>
 			hljs.configure({
 				tabReplace: '  ', // 2 spaces
-				classPrefix: '' // don't append class prefix
+				//classPrefix: '' // don't append class prefix
 			});
 			hljs.initHighlightingOnLoad();
 		</script>
