--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -5,7 +5,7 @@
 @button-color: #5eb9d7;
 @button-hover: #30b1a7;
 @button-shadow: #4497b8;
-@h1-color: #2f394f;
+@h1-color: #475165;
 @grey-header: #2f394f;
 @bg-color: #ecf1f9;				       	// Background color / secndary theme color
 @bg-color-light: #e0ecef;			    // Light background color
