--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -22,7 +22,7 @@
 
 /* Code */
 @import './posts/code.less';
-@import './posts/languages/default.less';
+/*@import './posts/languages/default.less';
 @import './posts/languages/shell.less';
 @import './posts/languages/python.less';
 @import './posts/languages/javascript.less';
@@ -30,7 +30,8 @@
 @import './posts/languages/json.less';
 @import './posts/languages/config.less';
 @import './posts/languages/markup.less';
-@import './posts/languages/java.less';
+@import './posts/languages/java.less';*/
+@import './posts/languages/nord.less';
 
 /* Baquette Box */
 @import 'https://hackers.nyc3.cdn.digitaloceanspaces.com/css/baguettebox.css';
