--- a/src/less/posts/languages/nord.less
+++ b/src/less/posts/languages/nord.less
@@ -1,198 +1,312 @@
 /*
-++++++++++++++++++++++++++++++++++++++++++++++++++++
-title      Nord                                    +
-project    nord                                    +
-version    0.2.0                                   +
-repository https://github.com/arcticicestudio/nord +
-author     Arctic Ice Studio                       +
-email      development@arcticicestudio.com         +
-copyright  Copyright (C) 2016                      +
-++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * Copyright (c) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
+ * Copyright (c) 2017-present Sven Greb <development@svengreb.de>
+ *
+ * Project:    Nord highlight.js
+ * Version:    0.1.0
+ * Repository: https://github.com/arcticicestudio/nord-highlightjs
+ * License:    MIT
+ * References:
+ *   https://github.com/arcticicestudio/nord
+ */
 
-[References]
-KSS
-  (http://warpspire.com/kss)
-kss-node
-  (https://github.com/kss-node/kss-node)
-*/
+.hljs {
+  display: block;
+    overflow-x: auto;
+    padding: 1.5em;
+    background: #353c4a;
+    border-radius: 5px;
+    font-size: .85em;
+    font-family: 'dm';
+}
 
-// A arctic, north-bluish color palette.
-// Created for the clean- and minimal flat design pattern to achieve a optimal focus and readability for code syntax
-// highlighting and UI.
-// It consists of a total of sixteen, carefully selected, dimmed pastel colors for a eye-comfortable, but yet colorful
-// ambiance.
-//
-// Styleguide Nord
+.hljs,
+.hljs-subst {
+  color: #D8DEE9;
+}
 
-// Base component color of "Polar Night".
-//
-// Used for texts, backgrounds, carets and structuring characters like curly- and square brackets.
-//
-// Markup:
-// <div style="background-color:#2E3440; width=60; height=60"></div>
-//
-// Styleguide Nord - Polar Night
-@nord0: #2E3440;
+.hljs-selector-tag {
+  color: #81A1C1;
+}
 
-// Lighter shade color of the base component color.
-//
-// Used as a lighter background color for UI elements like status bars.
-//
-// Markup:
-// <div style="background-color:#3B4252; width=60; height=60"></div>
-//
-// Styleguide Nord - Polar Night
-@nord1: #3B4252;
+.hljs-selector-id {
+  color: #8FBCBB;
+  font-weight: bold;
+}
 
-// Lighter shade color of the base component color.
-//
-// Used as line highlighting in the editor.
-// In the UI scope it may be used as selection- and hightlight color.
-//
-// Markup:
-// <div style="background-color:#434C5E; width=60; height=60"></div>
-//
-// Styleguide Nord - Polar Night
-@nord2: #434C5E;
+.hljs-selector-class {
+  color: #8FBCBB;
+}
 
-// Lighter shade color of the base component color.
-//
-// Used for comments, invisibles, indent- and wrap guide marker.
-// In the UI scope used as pseudoclass color for disabled elements.
-//
-// Markup:
-// <div style="background-color:#4C566A; width=60; height=60"></div>
-//
-// Styleguide Nord - Polar Night
-@nord3: #4C566A;
+.hljs-selector-attr {
+  color: #8FBCBB;
+}
 
-// Base component color of "Snow Storm".
-//
-// Main color for text, variables, constants and attributes.
-// In the UI scope used as semi-light background depending on the theme shading design.
-//
-// Markup:
-// <div style="background-color:#D8DEE9; width=60; height=60"></div>
-//
-// Styleguide Nord - Snow Storm
-@nord4: #D8DEE9;
+.hljs-selector-pseudo {
+  color: #88C0D0;
+}
 
-// Lighter shade color of the base component color.
-//
-// Used as a lighter background color for UI elements like status bars.
-// Used as semi-light background depending on the theme shading design.
-//
-// Markup:
-// <div style="background-color:#E5E9F0; width=60; height=60"></div>
-//
-// Styleguide Nord - Snow Storm
-@nord5: #E5E9F0;
+.hljs-addition {
+  background-color: rgba(163, 190, 140, 0.5);
+}
 
-// Lighter shade color of the base component color.
-//
-// Used for punctuations, carets and structuring characters like curly- and square brackets.
-// In the UI scope used as background, selection- and hightlight color depending on the theme shading design.
-//
-// Markup:
-// <div style="background-color:#ECEFF4; width=60; height=60"></div>
-//
-// Styleguide Nord - Snow Storm
-@nord6: #ECEFF4;
+.hljs-deletion {
+  background-color: rgba(191, 97, 106, 0.5);
+}
 
-// Bluish core color.
-//
-// Used for classes, types and documentation tags.
-//
-// Markup:
-// <div style="background-color:#8FBCBB; width=60; height=60"></div>
-//
-// Styleguide Nord - Frost
-@nord7: #8FBCBB;
+.hljs-built_in,
+.hljs-type {
+  color: #8FBCBB;
+}
 
-// Bluish core color.
-//
-// Represents the accent color of the color palette.
-// Main color for primary UI elements and methods/functions.
-//
-// Can be used for
-//   - Markup quotes
-//   - Markup link URLs
-//
-// Markup:
-// <div style="background-color:#88C0D0; width=60; height=60"></div>
-//
-// Styleguide Nord - Frost
-@nord8: #88C0D0;
+.hljs-class {
+  color: #8FBCBB;
+}
 
-// Bluish core color.
-//
-// Used for language-specific syntactic/reserved support characters and keywords, operators, tags, units and
-// punctuations like (semi)colons,commas and braces.
-//
-// Markup:
-// <div style="background-color:#81A1C1; width=60; height=60"></div>
-//
-// Styleguide Nord - Frost
-@nord9: #81A1C1;
+.hljs-function {
+  color: #88C0D0;
+}
 
-// Bluish core color.
-//
-// Used for markup doctypes, import/include/require statements, pre-processor statements and at-rules (`@`).
-//
-// Markup:
-// <div style="background-color:#5E81AC; width=60; height=60"></div>
-//
-// Styleguide Nord - Frost
-@nord10: #5E81AC;
+.hljs-function > .hljs-title {
+  color: #88C0D0;
+}
 
-// Colorful component color.
-//
-// Used for errors, git/diff deletion and linter marker.
-//
-// Markup:
-// <div style="background-color:#BF616A; width=60; height=60"></div>
-//
-// Styleguide Nord - Aurora
-@nord11: #BF616A;
+.hljs-keyword,
+.hljs-literal,
+.hljs-symbol {
+  color: #81A1C1;
+}
 
-// Colorful component color.
-//
-// Used for annotations.
-//
-// Markup:
-// <div style="background-color:#D08770; width=60; height=60"></div>
-//
-// Styleguide Nord - Aurora
-@nord12: #D08770;
+.hljs-number {
+  color: #B48EAD;
+}
 
-// Colorful component color.
-//
-// Used for escape characters, regular expressions and markup entities.
-// In the UI scope used for warnings and git/diff renamings.
-//
-// Markup:
-// <div style="background-color:#EBCB8B; width=60; height=60"></div>
-//
-// Styleguide Nord - Aurora
-@nord13: #EBCB8B;
+.hljs-regexp {
+  color: #EBCB8B;
+}
 
-// Colorful component color.
-//
-// Main color for strings and attribute values.
-// In the UI scope used for git/diff additions and success visualizations.
-//
-// Markup:
-// <div style="background-color:#A3BE8C; width=60; height=60"></div>
-//
-// Styleguide Nord - Aurora
-@nord14: #A3BE8C;
+.hljs-string {
+  color: #A3BE8C;
+}
 
-// Colorful component color.
-//
-// Used for numbers.
-//
-// Markup:
-// <div style="background-color:#B48EAD; width=60; height=60"></div>
-//
-// Styleguide Nord - Aurora
-@nord15: #B48EAD;
+.hljs-title {
+  color: #8FBCBB;
+}
+
+.hljs-params {
+  color: #D8DEE9;
+}
+
+.hljs-bullet {
+  color: #81A1C1;
+}
+
+.hljs-code {
+  color: #8FBCBB;
+}
+
+.hljs-emphasis {
+  font-style: italic;
+}
+
+.hljs-formula {
+  color: #8FBCBB;
+}
+
+.hljs-strong {
+  font-weight: bold;
+}
+
+.hljs-link:hover {
+  text-decoration: underline;
+}
+
+.hljs-quote {
+  color: #4C566A;
+}
+
+.hljs-comment {
+  color: #4C566A;
+}
+
+.hljs-doctag {
+  color: #8FBCBB;
+}
+
+.hljs-meta,
+.hljs-meta-keyword {
+  color: #5E81AC;
+}
+
+.hljs-meta-string {
+  color: #A3BE8C;
+}
+
+.hljs-attr {
+  color: #8FBCBB;
+}
+
+.hljs-attribute {
+  color: #D8DEE9;
+}
+
+.hljs-builtin-name {
+  color: #81A1C1;
+}
+
+.hljs-name {
+  color: #81A1C1;
+}
+
+.hljs-section {
+  color: #88C0D0;
+}
+
+.hljs-tag {
+  color: #81A1C1;
+}
+
+.hljs-variable {
+  color: #D8DEE9;
+}
+
+.hljs-template-variable {
+  color: #D8DEE9;
+}
+
+.hljs-template-tag {
+  color: #5E81AC;
+}
+
+.abnf .hljs-attribute {
+  color: #88C0D0;
+}
+
+.abnf .hljs-symbol {
+  color: #EBCB8B;
+}
+
+.apache .hljs-attribute {
+  color: #88C0D0;
+}
+
+.apache .hljs-section {
+  color: #81A1C1;
+}
+
+.arduino .hljs-built_in {
+  color: #88C0D0;
+}
+
+.aspectj .hljs-meta {
+  color: #D08770;
+}
+
+.aspectj > .hljs-title {
+  color: #88C0D0;
+}
+
+.bnf .hljs-attribute {
+  color: #8FBCBB;
+}
+
+.clojure .hljs-name {
+  color: #88C0D0;
+}
+
+.clojure .hljs-symbol {
+  color: #EBCB8B;
+}
+
+.coq .hljs-built_in {
+  color: #88C0D0;
+}
+
+.cpp .hljs-meta-string {
+  color: #8FBCBB;
+}
+
+.css .hljs-built_in {
+  color: #88C0D0;
+}
+
+.css .hljs-keyword {
+  color: #D08770;
+}
+
+.diff .hljs-meta {
+  color: #8FBCBB;
+}
+
+.ebnf .hljs-attribute {
+  color: #8FBCBB;
+}
+
+.glsl .hljs-built_in {
+  color: #88C0D0;
+}
+
+.groovy .hljs-meta:not(:first-child) {
+  color: #D08770;
+}
+
+.haxe .hljs-meta {
+  color: #D08770;
+}
+
+.java .hljs-meta {
+  color: #D08770;
+}
+
+.ldif .hljs-attribute {
+  color: #8FBCBB;
+}
+
+.lisp .hljs-name {
+  color: #88C0D0;
+}
+
+.lua .hljs-built_in {
+  color: #88C0D0;
+}
+
+.moonscript .hljs-built_in {
+  color: #88C0D0;
+}
+
+.nginx .hljs-attribute {
+  color: #88C0D0;
+}
+
+.nginx .hljs-section {
+  color: #5E81AC;
+}
+
+.pf .hljs-built_in {
+  color: #88C0D0;
+}
+
+.processing .hljs-built_in {
+  color: #88C0D0;
+}
+
+.scss .hljs-keyword {
+  color: #81A1C1;
+}
+
+.stylus .hljs-keyword {
+  color: #81A1C1;
+}
+
+.swift .hljs-meta {
+  color: #D08770;
+}
+
+.vim .hljs-built_in {
+  color: #88C0D0;
+  font-style: italic;
+}
+
+.yaml .hljs-meta {
+  color: #D08770;
+}
