--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -83,7 +83,7 @@
 				margin: 0;
 				display: block;
 				font-family: @header-font-bold !important;
-				font-size: 2.2em;
+				font-size: 2.1em;
 				letter-spacing: 0;
 				line-height: 1.1;
 				color: @h1-color;
@@ -117,7 +117,7 @@
 
 			h2 {
 				margin: 40px 0 5px;
-				color: @grey-header;
+				color: @h1-color;
 				line-height: 1.3;
 				font-family: @body-font;
 				font-weight: 100!important;
@@ -140,7 +140,7 @@
 			h3 {
 				font-size: 1.3em;
 				line-height: 1.2;
-				color: @grey-header;
+				color: @h1-color;
 				margin: 40px 0 5px;
 				font-family: @bold-font;
 				font-weight: 300;
@@ -192,10 +192,7 @@
 
 			p {
 				margin: 0 0 15px;
-				line-height: 1.5em;
-				@media(max-width: @mobile-breakpoint) {
-					line-height: 1.6em;
-				}
+				line-height: 1.6em;
 			}
 
 			ol,
