new post image header

--- a/src/less/posts/languages/nord.less
+++ b/src/less/posts/languages/nord.less
@@ -15,7 +15,6 @@
     overflow-x: auto;
     padding: 1.5em;
     background: #353c4a;
-    border-radius: 5px;
     font-size: .85em;
     font-family: 'dm';
 }
@@ -75,6 +74,7 @@
 .hljs-literal,
 .hljs-symbol {
   color: #81A1C1;
+  font-weight: 900;
 }
 
 .hljs-number {
@@ -126,7 +126,7 @@
 }
 
 .hljs-comment {
-  color: #4C566A;
+  color: #767e8f;
 }
 
 .hljs-doctag {
