--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -4,9 +4,9 @@
   .postlist {
     width: -webkit-fill-available;
     display: grid;
-    grid-gap: 40px;
+    grid-gap: 30px;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 20px auto 30px;
+    margin: 30px auto;
     @media(max-width: @tablet-breakpoint) {
       grid-template-columns: 1fr 1fr;
       max-width: 90%;
@@ -44,7 +44,7 @@
 
       .post-head {
         order: 1;
-        margin: 10px 0 15px;
+        margin: 0 0 20px;
         @media(max-width: @mobile-breakpoint) {
           margin: 0;
         }
