--- a/src/less/pages/series-detail.less
+++ b/src/less/pages/series-detail.less
@@ -76,6 +76,7 @@
     text-align: right;
     padding: 15px;
     transition: @transition;
+    background: white;
 
     &:hover {
       background: @hover-color;
