--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -7,27 +7,29 @@
         <img class="featured-image lazy" alt="{{title}}" loading="lazy" data-src="{{img_url feature_image}}" data-rjs="2">
       </a>
     {{/if}}
-    <div class="post-head">
-      <h2 class="post-title"><a href="{{url}}" class="title-link">{{{title}}}</a></h2>
-      <span class="post-excerpt">{{excerpt words="60"}}</span>
-    </div>
-    <div class="post-footer">
-      {{#primary_tag}}
-        <div class="meta-item primary-tag {{slug}}">
-          <a href="{{url}}">{{name}}</a>
-        </div>
-      {{/primary_tag}}
-
-      <div class="meta-item date">
-        <i class="fal fa-calendar"></i> <span>{{date published_at format="DD MMMM"}}</span>
+    <div class="post-preview-details">
+      <div class="post-head">
+        <h2 class="post-title"><a href="{{url}}" class="title-link">{{{title}}}</a></h2>
+        <span class="post-excerpt">{{excerpt words="60"}}</span>
       </div>
-      {{#primary_author}}
-        <div class="meta-item author">
-          <a href="{{url}}"><i class="far fa-user"></i> <span>{{name}}</span></a>
+      <div class="post-footer">
+        {{#primary_tag}}
+          <div class="meta-item primary-tag {{slug}}">
+            <a href="{{url}}">{{name}}</a>
+          </div>
+        {{/primary_tag}}
+
+        <div class="meta-item date">
+          <i class="fal fa-calendar"></i> <span>{{date published_at format="DD MMMM"}}</span>
         </div>
-      {{/primary_author}}
-      <div class="meta-item readtime">
-        <i class="far fa-eye"></i> <span>{{reading_time}}</span>
+        {{#primary_author}}
+          <div class="meta-item author">
+            <a href="{{url}}"><i class="far fa-user"></i> <span>{{name}}</span></a>
+          </div>
+        {{/primary_author}}
+        <div class="meta-item readtime">
+          <i class="far fa-eye"></i> <span>{{reading_time}}</span>
+        </div>
       </div>
     </div>
   </div>
