--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -1,13 +1,13 @@
 
 
   .post-meta {
-    margin: 20px 0 0;
+    margin: 20px 0;
     color: #787c87;
     font-size: 12px;
     display: flex;
     width: auto;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
     @media(max-width: @mobile-breakpoint) {
       padding: 0;
       max-width: none;
