--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -19,8 +19,10 @@
 	}
 
 	.post-image {
-		width: 100%;
-		max-height: 42vw;
+		max-height: 600px;
+    height: 50vw;
+    background-size: cover !important;
+		background-position-y: center !important;
 		@media(max-width: @tablet-breakpoint) {
 			max-height: unset;
 		}
@@ -57,10 +59,9 @@
 		}
 
 		.post-image {
-			line-height: 1;
-			height: auto;
-			overflow: hidden;
-			margin: 0;
+			max-height: 45vw;
+	    height: 45vw;
+	    background-size: cover !important;
 
 			@media(max-width: @tablet-breakpoint) {
 				height: unset;
@@ -83,8 +84,8 @@
 		}
 		/* Post header styles */
 		.post-header {
-			margin: 0 0 40px;
-			text-align: left;
+			margin: 0 0 60px;
+			text-align: center;
 			@media(max-width: @mobile-breakpoint) {
 				padding: 0;
 				margin: 30px 0;
@@ -96,15 +97,15 @@
 				margin: 0;
 				display: block;
 				font-family: @header-font-bold !important;
-				font-size: 2.1em;
+				font-size: 3em;
 				letter-spacing: 0;
 				line-height: 1.1;
 				color: @h1-color;
 				@media(max-width: @tablet-breakpoint) {
-					font-size: 2em;
+					font-size: 2.5em;
 				}
 				@media(max-width: @mobile-breakpoint) {
-					font-size: 1.65em;
+					font-size: 2em;
 					max-width: auto;
 					letter-spacing: 0;
 					line-height: 1.1;
