--- a/default.hbs
+++ b/default.hbs
@@ -11,6 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<meta name="theme-color" content="#5eb9d7" />
 	<link rel="shortcut icon" href="{{@site.icon}}" />
+	<link rel="stylesheet" href="https://use.typekit.net/dxd2utp.css">
 	{{^is "post"}}
 		<meta property="og:image" content="{{img_url @site.cover_image}}" />
 		<meta name="twitter:card" content="summary_large_image" />
