--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -43,10 +43,10 @@
 @mobile-breakpoint: 600px;
 
 // Font Styles
-@body-font: 'TTNormsPro-Regular', sans-serif;
-@bold-font: 'TTNormsPro-Medium', sans-serif;
-@header-font: 'TTNormsPro-Regular', sans-serif;
-@header-font-bold: 'TTNormsPro-Medium', sans-serif;
+@body-font: 'proxima-nova', sans-serif;
+@bold-font: 'Gilroy-Medium', sans-serif;
+@header-font: 'Gilroy-Regular', sans-serif;
+@header-font-bold: 'Gilroy-SemiBold', sans-serif;
 
 // Animations
 @transition: all 0.2s ease-out;
